# Constituency-Mapper

./: .gitignore  Dockerfile  GEOJSONtoPOLYGON.py  app.py  dbInteraction.py  docker-compose.yml  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: python-app.yml
templates/: index.html
