[tool.poetry]
package-mode = false
name = "constituency-mapper"
version = "0.1.0"
description = ""
authors = [
    "Kourosh Simpkins <kouroshsimpkins@gmail.com>",
    "Erdinc Mutlu <erdincmutlu@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "^8.3.0"
flask = "^3.0.3"
geojson = "^3.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
