[tool.poetry]
package-mode = false
name = "constituency-mapper"
version = "0.1.0"
description = ""
authors = [
    "Kourosh Simpkins <kouroshsimpkins@gmail.com>",
    "Erdinc Mutlu <erdincmutlu@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysql-connector-python = "9.1.0"
flask = "^3.1.0"
geojson = "^3.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
